# FinalArqProg

./: CMakeLists.txt  Cod.cpp  Cod.h  Codificador.cpp  Codificador.h  Codificador.ui  Decod.cpp  Decod.h  Decodificador.cpp  Decodificador.h  Decodificador.ui  Fachada.cpp  Fachada.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Observador.cpp  Observador.h
